rolled back to setup.py and removed setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,12 @@ description-file =
     README.rst
 home-page = http://pypi.python.org/pypi/setup.cfg
 requires-dist = setuptools
+include_package_data = True
 
 [files]
 packages =
-    diggrtoolbox
+    setup
+    setup.cfg
+	diggrtoolbox
+    diggrtoolbox.configgr
+    diggrtoolbox.deepget
