--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-setuptools==40.0.0
-pytest==3.6.3
+roman==3.0
 jsonschema==2.6.0
-requests==2.18.4
+requests==2.19.1
+python_Levenshtein==0.12.0
+PyYAML==3.13
