--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,25 +5,36 @@
 #    make update-requirements
 #
 alabaster==0.7.12         # via sphinx
-babel==2.6.0              # via sphinx
-certifi==2019.3.9
+atomicwrites==1.3.0       # via pytest
+attrs==19.3.0             # via pytest
+babel==2.8.0              # via sphinx
+certifi==2019.11.28
 chardet==3.0.4
-docutils==0.14            # via sphinx
+click==7.0                # via pip-tools
+coverage==5.0.3           # via pytest-cov
+docutils==0.16            # via sphinx
 idna==2.7
-imagesize==1.1.0          # via sphinx
-jinja2==2.10.1            # via sphinx
+imagesize==1.2.0          # via sphinx
+importlib-metadata==1.4.0  # via pluggy
+jinja2==2.10.3            # via sphinx
 jsonschema==2.6.0
 markupsafe==1.1.1         # via jinja2
-packaging==19.0           # via sphinx
-pygments==2.3.1           # via sphinx
-pyparsing==2.4.0          # via packaging
+more-itertools==8.1.0     # via pytest, zipp
+packaging==20.0           # via sphinx
+pip-tools==4.3.0
+pluggy==0.13.1            # via pytest
+py==1.8.1                 # via pytest
+pygments==2.5.2           # via sphinx
+pyparsing==2.4.6          # via packaging
+pytest-cov==2.8.1
+pytest==4.4.1
 python_levenshtein==0.12.0
-pytz==2019.1              # via babel
-pyyaml==5.1
+pytz==2019.3              # via babel
+pyyaml==5.1.1
 requests==2.20.1
 roman==3.0
-six==1.12.0               # via packaging
-snowballstemmer==1.2.1    # via sphinx
+six==1.13.0               # via packaging, pip-tools, pytest
+snowballstemmer==2.0.0    # via sphinx
 sphinx==2.0.1
 sphinxcontrib-applehelp==1.0.1  # via sphinx
 sphinxcontrib-devhelp==1.0.1  # via sphinx
@@ -31,4 +42,8 @@ sphinxcontrib-htmlhelp==1.0.2  # via sphinx
 sphinxcontrib-jsmath==1.0.1  # via sphinx
 sphinxcontrib-qthelp==1.0.2  # via sphinx
 sphinxcontrib-serializinghtml==1.1.3  # via sphinx
-urllib3==1.24.2
+urllib3==1.24.3
+zipp==1.0.0               # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
