--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.7.3-stretch
-      - image: circleci/python:3.8.1-buster
+      - image: circleci/python:3.8.2-buster
     steps:
       - checkout
       - run:
@@ -11,7 +10,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r requirements-dev.txt
+            pip install .
       - run: 
           name: Run tests
           command: |
